# ltx

./: .gitignore  Cargo.toml  README.md  bat
config/: litecoin.conf
src/: main.rs  patterns.rs  read_config.rs
