[package]
name = "ltx"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
# strip = true # this binary prob ain't size constrained

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"

# jesus christ
# https://github.com/johnthagen/min-sized-rust
